@@ -1,5 +1,10 @@
 2007-01-15  Vladimir Krasnov  <vladimirk@mainsoft.com>
 
+	* DerbyMembershipHelper.cs: fixed Users_DeleteUser, commented delete
+	from Personalization table
+
+2007-01-15  Vladimir Krasnov  <vladimirk@mainsoft.com>
+
 	* DerbyDBSchema.cs: fixed GetSchemaVersion, return nullif DB does
 	not exist
 
